# Intelahub

./: .env.example  .gitignore  Dockerfile  Intelahub_Assessment.postman_collection.json  Makefile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements-rerank.txt  requirements.txt
app/: main.py
app/api/: deps.py  health.py  ingest.py  query.py
app/core/: container.py  errors.py  logging.py  rate_limit.py  settings.py
app/models/: ingest.py  movie.py  query.py
app/services/: embedding_service.py  guardrails.py  ingestion_service.py  llm_service.py  normalizer.py  query_parser.py  reranker.py  retrieval_service.py  tmdb_client.py  vector_store.py
data/: eval_queries.json  eval_queries.template.json
docs/: postman_collection.json
scripts/: eval_retrieval.py
tests/: test_guardrails.py  test_health.py  test_llm_service.py  test_query_expansion.py  test_query_parser.py  test_retrieval_threshold.py
